refactor: fixed warning getFirst + unused import